Arranged the folder structure

--- a/HTML/quiz.html
+++ b/HTML/quiz.html
@@ -17,7 +17,7 @@
 
     <div class="quiz-box custom-box ">
         <div class="question-number">
-            Question 1 of 5
+            1 | <span class="qstn">5</span>
         </div>
         <div class="question">
             What year did the Titanic sink in the Atlantic Ocean?
